Inclusão de lâmpada quebrada na rotina do AND

--- a/and/index.html
+++ b/and/index.html
@@ -7,10 +7,10 @@
     <title>Circuito And</title>
 </head>
 <body>
-    <h1>Circuito And</h1>
+    <h1>Circuito And</h1>    
     <img src="img/swoff.png" alt="Chave desligada" id="sw1" onclick="testaChave(1)">
     <img src="img/swoff.png" alt="Chave desligada" id="sw2" onclick="testaChave(2)">
-    <img src="img/off.jpg" alt="Lâmpada" id="lampada">
+    <img src="img/off.jpg" alt="Lâmpada" id="lampada" onclick="quebraLamp()">
     <hr>
     <p>
         <img src="img/circ_and_off.png" id="and">
@@ -19,6 +19,6 @@
     <form>
 
     </form>
-    <script src="testaChave2.js"></script>
+    <script src="testaChave3.js"></script>
 </body>
 </html>
