--- a/jquery/index.html
+++ b/jquery/index.html
@@ -6,8 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Exemplo JQuery</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/jquery-3.4.1.min.js"></script>
 </head>
 <body>
+    <header>
+        <div class="Logo">
+            <a href="http://"><img src="img/logo.png" alt="logo"></a>
+        </div>
+        <a class="Hamburguer" href="http://">&#9776;</a>
+        <nav class="Menu">
+            <ul>
+                <li><a href="http://">Home</a></li>
+                <li><a href="http://">Sobre</a></li>
+                <li><a href="http://">Conteúdo</a></li>
+                <li><a href="http://">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
     <div class="Layout">
         <p>Exemplo JQuery</p>        
     </div>
@@ -26,12 +41,18 @@
         <p>Conteúdo sobre JQuery</p>        
     </div>
     <div class="Modulo">
-        <h2>Destaque 3</h2>
-        <p>texto</p>
+        <ul class="Destaque">
+            <li><img src="img/tux1.png" alt="tux1"></li>
+            <li><img src="img/tux2.png" alt="tux2"></li>
+            <li><img src="img/tux3.png" alt="tux3"></li>
+            <li><img src="img/tux4.png" alt="tux4"></li>
+        </ul>
     </div>    
     <footer>
         <p>© digosdomingos</p>        
     </footer>
     <img src="img/topo.png" alt="topo" id="top">
+    <script src="js/topo.js"></script>
+    <script src="js/efeito.js"></script>
 </body>
 </html>
