--- a/jquery/index.html
+++ b/jquery/index.html
@@ -13,7 +13,7 @@
         <div class="Logo">
             <a href="http://"><img src="img/logo.png" alt="logo"></a>
         </div>
-        <a class="Hamburguer" href="http://">&#9776;</a>
+        <a class="Hamburguer" href="#">&#9776;</a>
         <nav class="Menu">
             <ul>
                 <li><a href="http://">Home</a></li>
@@ -54,5 +54,6 @@
     <img src="img/topo.png" alt="topo" id="top">
     <script src="js/topo.js"></script>
     <script src="js/efeito.js"></script>
+    <script src="js/menu.js"></script>
 </body>
 </html>
